--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-tooltip": "^5.13.1",
     "redux": "^4.2.1",
     "sass-loader": "^13.3.1",
+    "slick-carousel": "^1.8.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "zingmp3-api-full": "^1.0.14"
