--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-slick": "^0.29.0",
     "react-tooltip": "^5.13.1",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "sass-loader": "^13.3.1",
     "slick-carousel": "^1.8.1",
     "uuid": "^9.0.0",
