--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "react-tooltip": "^5.13.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
