--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "react-tooltip": "^5.13.1",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "sass-loader": "^13.3.1",
