--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_BASE_URL=http://localhost:3000/
-REACT_APP_SERVER_URL=http://localhost:5000/api
-# REACT_APP_SERVER_URL=https://api-zingmp3-public-five.vercel.app/api
+# REACT_APP_SERVER_URL=http://localhost:5000/api
+REACT_APP_SERVER_URL=https://api-zingmp3-public-five.vercel.app/api
  
